@@ -21,6 +21,9 @@ t3lib_extMgm::addUserTSConfig('
 t3lib_extMgm::addUserTSConfig('
 	options.saveDocNew.tx_seminars_payment_methods=1
 ');
+t3lib_extMgm::addUserTSConfig('
+	options.saveDocNew.tx_seminars_event_type=1
+');
 
 
 // Adds our custom function to a hook in t3lib/class.t3lib_tcemain.php
