@@ -104,6 +104,7 @@
             <label index="tx_seminars_seminars.price_regular">Regular price</label>
             <label index="tx_seminars_seminars.price_special">Special price</label>
             <label index="tx_seminars_seminars.payment_methods">Allowed methods of payment</label>
+            <label index="tx_seminars_seminars.event_type">Event type</label>
             <label index="tx_seminars_seminars.organizers">Organizers</label>
             <label index="tx_seminars_seminars.needs_registration">Needs registration</label>
             <label index="tx_seminars_seminars.attendees_min">Minimal number of attendees</label>
@@ -158,6 +159,8 @@
             <label index="tx_seminars_payment_methods">Methods of payment</label>
             <label index="tx_seminars_payment_methods.title">Title</label>
             <label index="tx_seminars_payment_methods.description">Detailed description for e-mails:</label>
+            <label index="tx_seminars_event_type">Event type</label>
+            <label index="tx_seminars_event_type.title">Title</label>
             <label index="tt_content.list_type_pi1">Seminar Manager</label>
         </languageKey>
         <languageKey index="de" type="array">
@@ -183,6 +186,7 @@
             <label index="tx_seminars_seminars.price_regular">Standardpreis</label>
             <label index="tx_seminars_seminars.price_special">Sonderpreis</label>
             <label index="tx_seminars_seminars.payment_methods">Erlaubte Zahlungsarten</label>
+            <label index="tx_seminars_seminars.event_type">Veranstaltungsart</label>
             <label index="tx_seminars_seminars.organizers">Veranstalter</label>
             <label index="tx_seminars_seminars.needs_registration">Anmeldung nötig</label>
             <label index="tx_seminars_seminars.attendees_min">Minimale Anzahl TeilnehmerInnen</label>
@@ -237,6 +241,8 @@
             <label index="tx_seminars_payment_methods">Zahlungsarten</label>
             <label index="tx_seminars_payment_methods.title">Titel</label>
             <label index="tx_seminars_payment_methods.description">Detaillierte Beschreibung für E-Mails:</label>
+            <label index="tx_seminars_event_type">Veranstaltungsart</label>
+            <label index="tx_seminars_event_type.title">Titel</label>
             <label index="tt_content.list_type_pi1">Seminar-Manager</label>
         </languageKey>
         <languageKey index="nl" type="array">
@@ -338,6 +344,7 @@
             <label index="tx_seminars_seminars.price_regular" type="integer">81309183</label>
             <label index="tx_seminars_seminars.price_special" type="integer">35819210</label>
             <label index="tx_seminars_seminars.payment_methods" type="integer">77656372</label>
+            <label index="tx_seminars_seminars.event_type" type="integer">99114704</label>
             <label index="tx_seminars_seminars.organizers" type="integer">68798680</label>
             <label index="tx_seminars_seminars.needs_registration" type="integer">228396671</label>
             <label index="tx_seminars_seminars.attendees_min" type="integer">173583662</label>
@@ -392,6 +399,8 @@
             <label index="tx_seminars_payment_methods" type="integer">175386290</label>
             <label index="tx_seminars_payment_methods.title" type="integer">192455458</label>
             <label index="tx_seminars_payment_methods.description" type="integer">189468887</label>
+            <label index="tx_seminars_event_type" type="integer">99114704</label>
+            <label index="tx_seminars_event_type.title" type="integer">192455458</label>
             <label index="tt_content.list_type_pi1" type="integer">144163361</label>
         </languageKey>
         <languageKey index="nl" type="array">
