@@ -73,6 +73,7 @@
 			<label index="label_price_regular">Regular price</label>
 			<label index="label_price_special">Special price</label>
 			<label index="label_paymentmethods">Available methods of payment</label>
+			<label index="label_event_type">Event type</label>
 			<label index="label_organizers">Organizers</label>
 			<label index="label_vacancies">Vacancies</label>
 			<label index="label_deadline_registration">Deadline for registration</label>
@@ -164,6 +165,7 @@
 			<label index="label_price_regular">Standardpreis</label>
 			<label index="label_price_special">Spezialpreis</label>
 			<label index="label_paymentmethods">Mögliche Zahlungsarten</label>
+			<label index="label_event_type">Veranstaltungsart</label>
 			<label index="label_organizers">Veranstalter</label>
 			<label index="label_vacancies">Freie Plätze</label>
 			<label index="label_deadline_registration">Anmeldeschluss</label>
@@ -409,6 +411,7 @@
 			<label index="message_noRegistrations" type="integer">261689699</label>
 			<label index="seminars.pi_flexform.hideSearchForm" type="integer">123595759</label>
 			<label index="seminars.pi_flexform.hidePageBrowser" type="integer">170072771</label>
+			<label index="label_event_type" type="integer">99114704</label>
 		</languageKey>
 		<languageKey index="no" type="array">
 		</languageKey>
@@ -629,6 +632,7 @@
 			<label index="message_registrationForm_informal">If you like, you can enter some data for your registration here:</label>
 			<label index="message_noRegistrations">For this event, there are no registrations yet.</label>
 			<label index="seminars.pi_flexform.hidePageBrowser">Hide the page browser in list view:</label>
+			<label index="label_event_type">Event type</label>
 		</languageKey>
 	</orig_text>
 </T3locallang>
