@@ -14,7 +14,8 @@
       <tr###CLASS_HEADERROW###>
 <!-- ###LISTHEADER_WRAPPER_TITLE### -->      <th###CLASS_HEADERTITLE###>###HEADER_TITLE###</th>
 <!-- ###LISTHEADER_WRAPPER_TITLE### --><!-- ###LISTHEADER_WRAPPER_UID### -->      <th###CLASS_HEADERUID###>###HEADER_UID###</th>
-<!-- ###LISTHEADER_WRAPPER_UID### --><!-- ###LISTHEADER_WRAPPER_ACCREDITATION_NUMBER### -->      <th###CLASS_HEADERACCREDITATION_NUMBER###>###HEADER_ACCREDITATION_NUMBER###</th>
+<!-- ###LISTHEADER_WRAPPER_UID### --><!-- ###LISTHEADER_WRAPPER_EVENT_TYPE### -->      <th###CLASS_HEADEREVENT_TYPE###>###HEADER_EVENT_TYPE###</th>
+<!-- ###LISTHEADER_WRAPPER_EVENT_TYPE### --><!-- ###LISTHEADER_WRAPPER_ACCREDITATION_NUMBER### -->      <th###CLASS_HEADERACCREDITATION_NUMBER###>###HEADER_ACCREDITATION_NUMBER###</th>
 <!-- ###LISTHEADER_WRAPPER_ACCREDITATION_NUMBER### --><!-- ###LISTHEADER_WRAPPER_CREDIT_POINTS### -->      <th###CLASS_HEADERCREDIT_POINTS###>###HEADER_CREDIT_POINTS###</th>
 <!-- ###LISTHEADER_WRAPPER_CREDIT_POINTS### --><!-- ###LISTHEADER_WRAPPER_SPEAKERS### -->      <th###CLASS_HEADERSPEAKERS###>###HEADER_SPEAKERS###</th>
 <!-- ###LISTHEADER_WRAPPER_SPEAKERS### --><!-- ###LISTHEADER_WRAPPER_DATE### -->      <th###CLASS_HEADERDATE###>###HEADER_DATE###</th>
@@ -39,7 +40,8 @@
 <!-- ###LIST_ITEM### -->    <tr###CLASS_ITEMROW###>
 <!-- ###LISTITEM_WRAPPER_TITLE### -->      <td###CLASS_LISTTITLE###>###TITLE_LINK###</td>
 <!-- ###LISTITEM_WRAPPER_TITLE### --><!-- ###LISTITEM_WRAPPER_UID### -->      <td###CLASS_LISTUID###>###UID###</td>
-<!-- ###LISTITEM_WRAPPER_UID### --><!-- ###LISTITEM_WRAPPER_ACCREDITATION_NUMBER### -->      <td###CLASS_LISTACCREDITATION_NUMBER###>###ACCREDITATION_NUMBER###</td>
+<!-- ###LISTITEM_WRAPPER_UID### --><!-- ###LISTITEM_WRAPPER_EVENT_TYPE### -->      <td###CLASS_LISTEVENT_TYPE###>###EVENT_TYPE###</td>
+<!-- ###LISTITEM_WRAPPER_EVENT_TYPE### --><!-- ###LISTITEM_WRAPPER_ACCREDITATION_NUMBER### -->      <td###CLASS_LISTACCREDITATION_NUMBER###>###ACCREDITATION_NUMBER###</td>
 <!-- ###LISTITEM_WRAPPER_ACCREDITATION_NUMBER### --><!-- ###LISTITEM_WRAPPER_CREDIT_POINTS### -->      <td###CLASS_LISTCREDIT_POINTS###>###CREDIT_POINTS###</td>
 <!-- ###LISTITEM_WRAPPER_CREDIT_POINTS### --><!-- ###LISTITEM_WRAPPER_SPEAKERS### -->      <td###CLASS_LISTSPEAKERS###>###SPEAKERS###</td>
 <!-- ###LISTITEM_WRAPPER_SPEAKERS### --><!-- ###LISTITEM_WRAPPER_DATE### -->      <td###CLASS_LISTDATE###>###DATE###</td>
@@ -56,7 +58,8 @@
 
 
 <!-- ###SINGLE_VIEW###  -->
-<!-- ###FIELD_WRAPPER_TITLE### --><h2>###TYPE###: ###TITLE###</h2>
+
+<!-- ###FIELD_WRAPPER_TITLE### --><h2>###EVENT_TYPE###: ###TITLE###</h2>
 
 <!-- ###FIELD_WRAPPER_TITLE### --><!-- ###FIELD_WRAPPER_SUBTITLE### --><h3>###SUBTITLE###</h3>
 
@@ -125,7 +128,7 @@
 
 
 <!-- ###REGISTRATION_HEAD### -->
-<h1>###LABEL_REGISTRATION###: <!-- ###REGISTRATION_WRAPPER_UID### -->###LABEL_UID### ###UID###, <!-- ###REGISTRATION_WRAPPER_UID### --><!-- ###REGISTRATION_WRAPPER_ACCREDITATION_NUMBER### -->###LABEL_ACCREDITATION_NUMBER### ###ACCREDITATION_NUMBER###, <!-- ###REGISTRATION_WRAPPER_ACCREDITATION_NUMBER### --><!-- ###REGISTRATION_WRAPPER_TITLE### -->###TITLE###<!-- ###REGISTRATION_WRAPPER_TITLE### --></h1>
+<h1>###LABEL_REGISTRATION###: <!-- ###REGISTRATION_WRAPPER_UID### -->###LABEL_UID### ###UID###, <!-- ###REGISTRATION_WRAPPER_UID### --><!-- ###REGISTRATION_WRAPPER_ACCREDITATION_NUMBER### -->###LABEL_ACCREDITATION_NUMBER### ###ACCREDITATION_NUMBER###, <!-- ###REGISTRATION_WRAPPER_ACCREDITATION_NUMBER### -->###EVENT_TYPE###: <!-- ###REGISTRATION_WRAPPER_TITLE### -->###TITLE###<!-- ###REGISTRATION_WRAPPER_TITLE### --></h1>
 <!-- ###WRAPPER_ERROR### --><p ###CLASS_ERROR###>###ERROR_TEXT###</p>
 
 <!-- ###WRAPPER_ERROR### -->
