@@ -1,7 +1,7 @@
 <!-- ###MAIL_THANKYOU### -->
 <!-- ###FIELD_WRAPPER_HELLO### -->###HELLO###
 
-<!-- ###FIELD_WRAPPER_HELLO### --><!-- ###FIELD_WRAPPER_TITLE### -->###TYPE###: ###TITLE###
+<!-- ###FIELD_WRAPPER_HELLO### --><!-- ###FIELD_WRAPPER_TITLE### -->###EVENT_TYPE###: ###TITLE###
 
 <!-- ###FIELD_WRAPPER_TITLE### --><!-- ###FIELD_WRAPPER_UID### -->[###LABEL_UID###]
 ###UID###
